[metadata]
description-file = README.md

[tool:pytest]
addopts = --doctest-glob='*.md' --doctest-modules --cov=nowplaypadgen --pylint --mypy

[pylint.TYPECHECK]
ignored-classes = tzinfo

[isort]
known_first_party=nowplaying
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[flake8]
ignore =
    # whitespace before ':'
    E203,
    # too many leading ### in a block comment
    E266,
    # line too long (managed by black)
    E501,
    # Line break occurred before a binary operator (this is not PEP8 compatible)
    W503,
    # Missing docstring in public module
    D100,
    # Missing docstring in public class
    D101,
    # Missing docstring in public method
    D102,
    # Missing docstring in public function
    D103,
    # Missing docstring in public package
    D104,
    # Missing docstring in magic method
    D105,
    # Missing docstring in public package
    D106,
    # Missing docstring in __init__
    D107,
    # needed because of https://github.com/ambv/black/issues/144
    D202,
    # other string does contain unindexed parameters
    P103
# used to be 80 until we moved pylint config into this file
# and it started picking up on the flake8 section.
# set to 88 until we wait for https://github.com/PyCQA/pylint/issues/4371
# to get resolved (and we can configure pylint via [pylint.*])
max-line-length = 88
exclude = migrations snapshots
max-complexity = 10

[mypy]
warn_unused_ignores = True

[mypy-mutagen]
ignore_missing_imports = True
